--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.11.2",
+    "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
     "react-slider-swiper": "^2.0.6",
     "swiper": "^9.3.2",
