--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "country-flag-icons": "^1.5.7",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
+    "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-flags-select": "^2.2.3",
     "react-icons": "^4.8.0",
     "react-multi-carousel": "^2.8.4",
     "react-router-dom": "^6.11.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
+    "react-select": "^5.7.3",
+    "react-select-country-list": "^2.2.3",
     "react-slider-swiper": "^2.0.6",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0",
