--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "@testing-library/jest-dom": "^5.16.5",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
-    "chima-flags-select": "1.0.1",
+    "chima-flags-select": "^1.0.1",
     "country-flag-icons": "^1.5.7",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
