--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "react-alice-carousel": "^2.7.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
-    "react-icons": "^4.8.0",
+    "react-icons": "^4.9.0",
     "react-multi-carousel": "^2.8.4",
+    "react-phone-number-input": "^3.2.23",
     "react-router-dom": "^6.11.2",
     "react-router-hash-link": "^2.4.3",
     "react-scripts": "5.0.1",
