--- a/package.json
+++ b/package.json
@@ -10,10 +10,13 @@
     "@testing-library/user-event": "^13.5.0",
     "chima-flags-select": "^1.0.2",
     "country-flag-icons": "^1.5.7",
+    "install": "^0.13.0",
+    "joi": "^17.9.2",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.44.3",
     "react-icons": "^4.9.0",
     "react-multi-carousel": "^2.8.4",
     "react-phone-input-2": "^2.15.1",
@@ -24,6 +27,7 @@
     "react-select": "^5.7.3",
     "react-select-country-list": "^2.2.3",
     "react-slider-swiper": "^2.0.6",
+    "react-toastify": "^9.1.3",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
