--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "@testing-library/user-event": "^13.5.0",
     "chima-flags-select": "^1.0.2",
     "country-flag-icons": "^1.5.7",
+    "dees-verification-code-input": "^1.0.6",
     "install": "^0.13.0",
     "joi": "^17.9.2",
     "react": "^18.2.0",
