--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "dees-verification-code-input": "^1.0.6",
     "install": "^0.13.0",
     "joi": "^17.9.2",
+    "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
     "react-country-region-selector": "^3.6.1",
