--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "react-select": "^5.7.3",
     "react-select-country-list": "^2.2.3",
     "react-slider-swiper": "^2.0.6",
+    "react-tooltip": "^5.16.1",
     "swiper": "^9.3.2",
     "uuid": "^9.0.0",
     "web-vitals": "^2.1.4"
