--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
     "axios": "^1.4.0",
+    "chart.js": "^4.3.0",
     "chima-flags-select": "^1.0.2",
     "country-flag-icons": "^1.5.7",
     "dees-verification-code-input": "^1.0.6",
@@ -17,6 +18,7 @@
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
+    "react-chartjs-2": "^5.2.0",
     "react-country-region-selector": "^3.6.1",
     "react-dom": "^18.2.0",
     "react-hook-form": "^7.44.3",
