--- a/package.json
+++ b/package.json
@@ -12,8 +12,10 @@
     "chart.js": "^4.3.0",
     "chima-flags-select": "^1.0.2",
     "dees-verification-code-input": "^1.0.6",
+    "html2canvas": "^1.4.1",
     "install": "^0.13.0",
     "joi": "^17.9.2",
+    "jspdf": "^2.5.1",
     "otp-input-react": "^0.3.0",
     "react": "^18.2.0",
     "react-alice-carousel": "^2.7.1",
